# user-ms

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yaml  pom.xml  pyproject.toml  test.db
app/: main.py
app/api/: events.py  routes.py
app/api/endpoints/: access.py  auth.py
app/api/endpoints/administrator/: permissions.py  users.py
app/auth/: env.py  hasher.py  regex.py  token.py
app/crud/: access_logs.py  permissions.py  users.py
app/db/: init_db.py  session.py
app/db/populate/: Users.py  main.py
app/models/: Access_Logs.py  Permissions.py  Users.py
app/schemas/: Access_Logs.py  Auth.py  Permissions.py  Users.py  Validators.py
app/utils/: api.py  config.py  conversions.py  email.py  lists.py  print.py
src/main/java/com/pes/user_ms/: UserMsApplication.java
src/main/java/com/pes/user_ms/configs/swagger/: OpenApiConfig.java
src/main/resources/: application.properties
src/test/java/com/pes/user_ms/: UserMsApplicationTests.java
users_ms/: __init__.py  __main__.py  settings.py
users_ms/api/: __init__.py  utils.py
users_ms/api/users/: controller.py  models.py  routes.py  schemas.py
users_ms/api/users/auth/: auth.py
users_ms/controllers/: user_controller.py
users_ms/db/: __init__.py  models.py  schemas.py
users_ms/db/users/: models.py  schemas.py
users_ms/dependencies/: __init__.py  auth.py  cors.py  db.py  lifespan.py  logging.py  security.py
users_ms/health/: __init__.py  health.py
users_ms/routes/: __init__.py  user_routes.py
users_ms/tests/: conftest.py  test_users.py
users_ms/tests/mocks/: users.py
